hotfix: navigation styling fix on mobile

--- a/client/src/components/navigation/navigation.module.css
+++ b/client/src/components/navigation/navigation.module.css
@@ -99,13 +99,13 @@
     gap: 1rem;
 }
 
-.nav a {
+.nav > * {
     font-size: 1.75rem;
     line-height: 2rem;
     transition: all .2s ease-out;
 }
 
-.nav a:hover {
+.nav > *:hover {
     color: var(--PRIMARY);
     font-weight: 500;
 }
@@ -190,7 +190,7 @@
     opacity: 0;
 }
 
-.hide-dropdown:hover{
+.hide-dropdown:hover {
     background: none;
 }
 
